Started gen_8_investigation branch

--- a/pkmn_legendary_classification_knn.ipynb
+++ b/pkmn_legendary_classification_knn.ipynb
@@ -2332,7 +2332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just like earlier, the model predicted all non-legendary pokemon correctly, but for some reason is having more trouble predicting legendary pokemon now.  The weighted average of precision is 85%, recall 81%, and f1-score 75%."
+    "Just like earlier, the model predicted all non-legendary pokemon correctly, but for some reason is having more trouble predicting legendary pokemon now.  The weighted average of precision is 85%, recall 81%, and f1-score 75%.  Not bad performance, for now we'll consider this our winner."
    ]
   },
   {
