Changed output path of savefigs

--- a/pkmn_legendary_classification.ipynb
+++ b/pkmn_legendary_classification.ipynb
@@ -932,7 +932,7 @@
     "sns.pairplot(data=new_df, \n",
     "             hue='Legendary',\n",
     "             y_vars='Number')\n",
-    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pairplots.png\");"
+    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pokemon_classifier/pairplots.png\");"
    ]
   },
   {
@@ -971,7 +971,7 @@
     "             hue='Legendary',\n",
     "             y='Number',\n",
     "             x='Total Stats')\n",
-    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pairplot_total_stats.png\");"
+    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pokemon_classifier/pairplot_total_stats.png\");"
    ]
   },
   {
@@ -1097,7 +1097,7 @@
     "plt.ylim(b, t)\n",
     "plt.xticks(rotation=45)\n",
     "plt.yticks(rotation=0)\n",
-    "plt.savefig('/users/rancher/Google Drive/Coding/website/github_pages/images/heatmap.png')\n",
+    "plt.savefig('/users/rancher/Google Drive/Coding/website/github_pages/images/pokemon_classifier/heatmap.png')\n",
     "plt.show();"
    ]
   },
@@ -2470,7 +2470,7 @@
     "                                      colorbar=False)\n",
     "plt.grid(False)\n",
     "plt.title('kNN Model using Total Stats to predict legendary status on generation 1-6 Pokemon')\n",
-    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/knn_gen_16.png\");"
+    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pokemon_classifier/knn_gen_16.png\", bbox_inches=\"tight\");"
    ]
   },
   {
@@ -2718,7 +2718,7 @@
     "                                      colorbar=False)\n",
     "plt.grid(False)\n",
     "plt.title('kNN Model using Total Stats to predict legendary status on generation 7 Pokemon')\n",
-    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/knn_gen_7.png\");"
+    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pokemon_classifier/knn_gen_7.png\", bbox_inches=\"tight\");"
    ]
   },
   {
@@ -2796,7 +2796,7 @@
        "  <th>Date:</th>            <td>Sun, 24 Jul 2022</td> <th>  Pseudo R-squ.:     </th>  <td>-0.3514</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>15:44:28</td>     <th>  Log-Likelihood:    </th> <td> -304.68</td>\n",
+       "  <th>Time:</th>                <td>15:59:52</td>     <th>  Log-Likelihood:    </th> <td> -304.68</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -225.45</td>\n",
@@ -2823,7 +2823,7 @@
        "Model:                          Logit   Df Residuals:                      799\n",
        "Method:                           MLE   Df Model:                            0\n",
        "Date:                Sun, 24 Jul 2022   Pseudo R-squ.:                 -0.3514\n",
-       "Time:                        15:44:28   Log-Likelihood:                -304.68\n",
+       "Time:                        15:59:52   Log-Likelihood:                -304.68\n",
        "converged:                       True   LL-Null:                       -225.45\n",
        "Covariance Type:            nonrobust   LLR p-value:                       nan\n",
        "===============================================================================\n",
@@ -3045,7 +3045,7 @@
     "                                      colorbar=False)\n",
     "plt.grid(False)\n",
     "plt.title('Logisting Regression Model using Total Stats to predict legendary status on generation 7 Pokemon')\n",
-    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/log_reg_gen_7.png\");"
+    "plt.savefig(\"/users/rancher/Google Drive/Coding/website/github_pages/images/pokemon_classifier/log_reg_gen_7.png\", bbox_inches=\"tight\");"
    ]
   },
   {
