Updated table of contents

--- a/pkmn_legendary_classification.ipynb
+++ b/pkmn_legendary_classification.ipynb
@@ -13,11 +13,11 @@
    "id": "a8c674b6-fcca-4cd5-a9ff-739a70ccd71c",
    "metadata": {},
    "source": [
-    "1) [Loading and viewing dataset](#Imports-and-loading-data)\n",
-    "2) [Joining tables](#Joins)\n",
-    "3) [Correlation between features and legendary](#Which-numerical-features-are-most-highly-correlated-with-a-Pokémon-being-legendary?)\n",
-    "4) [kNN Classification](#kNN-classification)\n",
-    "5) [Logistic Regression](#Logistic-regression)"
+    "1) [Loading and viewing dataset](#Imports-and-loading-data)<br>\n",
+    "2) [Joining tables](#Joins)<br>\n",
+    "3) [Correlation between features and legendary](#Which-numerical-features-are-most-highly-correlated-with-a-Pokémon-being-legendary?)<br>\n",
+    "4) [kNN Classification](#kNN-classification)<br>\n",
+    "5) [Logistic Regression](#Logistic-regression)<br>"
    ]
   },
   {
